--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -30,6 +30,9 @@ body {
 
   --ksi-dropdown-hover-bg: #{$ksi-orange-200};
 
+  --ksi-successful-result-fg-1: #{$ksi-orange-230};
+  --ksi-successful-result-fg-2: #{$ksi-orange-220};
+
   &.theme-dark {
     --ksi-page-bg: #{$ksi-gray-20};
     --ksi-page-fg: #{$ksi-gray-220};
@@ -55,10 +58,13 @@ body {
     --ksi-thumbnail-hover-bg: #{$ksi-gray-20};
 
     --ksi-dropdown-hover-bg: #{$ksi-orange-40};
+
+    --ksi-successful-result-fg-1: #{$ksi-orange-20};
+    --ksi-successful-result-fg-2: #{$ksi-orange-30};
   }
 }
 
-// AUTO-GENERATED BY gen-scss-theme.sh on Fri Apr 15 15:53:52 CEST 2022
+// AUTO-GENERATED BY gen-scss-theme.sh on Mon Apr 25 14:34:41 CEST 2022
 $ksi-article-preview-bg: var(--ksi-article-preview-bg);
 $ksi-article-preview-border-fg: var(--ksi-article-preview-border-fg);
 $ksi-code-bg: var(--ksi-code-bg);
@@ -74,6 +80,8 @@ $ksi-navbar-fg: var(--ksi-navbar-fg);
 $ksi-page-bg: var(--ksi-page-bg);
 $ksi-page-fg: var(--ksi-page-fg);
 $ksi-page-welcome-banner-bg: var(--ksi-page-welcome-banner-bg);
+$ksi-successful-result-fg-1: var(--ksi-successful-result-fg-1);
+$ksi-successful-result-fg-2: var(--ksi-successful-result-fg-2);
 $ksi-thumbnail-bg: var(--ksi-thumbnail-bg);
 $ksi-thumbnail-hover-bg: var(--ksi-thumbnail-hover-bg);
 $ksi-title: var(--ksi-title);
